// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Watermark > Image watermark snapshot 1`] = `
<div>
  <div
    class=""
    style="position: relative; overflow: hidden;"
  />
</div>
`;

exports[`Watermark > Observe the modification of style > watermark 1`] = `
<div>
  <div
    class="watermark"
    style="position: relative; overflow: hidden;"
  />
</div>
`;

exports[`Watermark > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  class=""
  style="position: relative; overflow: hidden;"
/>
`;
